# Cache-Hierarchy-Simulation-Tool

./: Makefile  README.md  basic_config.json  build_env.bash  runDataGeneratorTool.bash  tool_env.bash  zipDataset.bash
DataGenerator/: makefile.rules
DataGenerator/Benchmarks/: Makefile  forkTest  forkTest.cpp  parallelSimpleTest  parallelSimpletest.cpp  simpleTest  simpleTest.cpp
DataGenerator/benchmarks/: matrixMultSingle.cpp
DataGenerator/include/: DatafileController.h
DataGenerator/src/: DataGenerator.cpp  DatafileController.cpp
DataGenerator/test/: Makefile
DataGenerator/tests/: Makefile  matrixMultFork.cpp  matrixMultForkIneff.cpp  matrixMultOpenMP.cpp  matrixMultOpenMPIneff.cpp  (+2 more)
config/: Makefile
simulator/: CMakeLists.txt  Makefile
simulator/examples/: example.cpp
simulator/include/: DatasetParser.h  api.h  basiccache.h  cache.h  cacheinterface.h  configparser.h  core.h  datafileparser.h  datasetparser.h  exception.h  icache.h  instruction.h  replacementpolicy.h  system.h  types.h
simulator/include/cache/: cache.h  directmapped.h  fullyassociative.h  setassociative.h
simulator/include/replacementpolicy/: firstinfirstout.h  ireplacementpolicy.h  lastinfirstout.h  policyinterface.h  policylist.h  replacementpolicy.h
simulator/src/: ConfigParser.cpp  DatasetParser.cpp  api.cpp  basiccache.cpp  cache.cpp  configparser.cpp  core.cpp  datafileparser.cpp  datasetparser.cpp  system.cpp
simulator/src/cache/: cache.cpp  setassociative.cpp
simulator/src/replacementpolicy/: firstinfirstout.cpp  lastinfirstout.cpp
simulator/test/: test_api.cpp  test_basiccache.cpp  test_core.cpp  test_firstinfirstout.cpp  test_lastinfirstout.cpp  test_system.cpp
(+6 files in other folders)
